# ruitu_tasks

./: .gitignore  README.md  pyproject.toml
configs/: resting_hbn_inspired.yaml
docs/: windows_runbook.md  windows_software_setup.md
docs/superpowers/plans/: 2026-05-13-resting-state-lsl.md
src/resting_task/: run_resting.py
task_rest/: pyproject.toml
task_rest/configs/: resting_hbn_inspired.yaml
task_rest/docs/: participant_briefing.html  windows_runbook.md  windows_software_setup.md
task_rest/docs/superpowers/plans/: 2026-05-13-resting-state-lsl.md
task_rest/src/resting_task/: __init__.py  config.py  lsl_markers.py  protocol.py  run_resting.py
task_rest/tests/: test_config.py  test_gp3_lsl.py  test_protocol.py  test_run_resting.py  test_verify_xdf.py
task_rest/tools/: GP3_lsl.py  verify_xdf.py
tests/: test_config.py  test_lsl_markers.py
tools/: check_lsl_streams.py
