[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "resting-task"
version = "0.1.0"
description = "PsychoPy and LSL resting-state task."
requires-python = ">=3.10"
dependencies = [
    "psychopy",
    "pylsl",
    "pyxdf",
    "PyYAML",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
